...
    <string name="description">"Description: "</string>
    <string name="location">"Location: "</string>
    <string name="latitude">"Latitude: "</string>
    <string name="longitude">Longitude: "</string>
    <string name="location_enabled">Location enabled</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>

    <!-- Error strings -->
...
